--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.24.8",
+    "axios": "^1.9.0",
     "color": "^5.0.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "2.4.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1"
   },
